--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsc && node dist/",
     "format": "npx prettier --write ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.5",
+    "dotenv": "^16.3.2",
+    "nodemon": "^3.0.3"
+  },
+  "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
     "zod": "^3.22.4"
