configures nodemon and adds dist to gitignore

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc && node dist/",
+    "build": "npx tsc",
+    "dev": "nodemon",
     "format": "npx prettier --write ."
   },
   "keywords": [],
