--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
+    "start": "node src/index",
     "dev": "nodemon",
     "format": "npx prettier --write ."
   },
@@ -12,11 +12,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.11.5",
     "dotenv": "^16.3.2",
     "nodemon": "^3.0.3"
   },
