--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
